<package>
  <name>cxy_lsdslam</name>
  <version>0.0.1</version>
  <description>
    CXY version of LSD-SLAM
  </description>
  <maintainer email="cuixiongyi2013@gmail.com">Xiongyi Cui</maintainer>
  <license>Copyright</license>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>interactive_markers</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>

